# EasyIjkPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/maniu/maniuijk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MNQueue.cpp  MNQueue.h  native-lib.cpp
app/src/main/cpp/include/libavcodec/: packet.h
app/src/main/cpp/include/libavutil/: frame.h
app/src/main/java/com/maniu/maniuijk/: MNPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/maniu/maniuijk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
